--- a/사전 준비 자료/사전 설치 내용.md
+++ b/사전 준비 자료/사전 설치 내용.md
@@ -1,5 +1,19 @@
-# Windows 환경
-## Putty로 ssh 접속하기
+# 사전 설치 내용(terminal, Code editor)
+
+## Windows 환경
+
+> XShell, PowerShell, Putty 등 기존에 사용해보셨거나 원하시는 걸로 설치하시면 됩니다. 기존 경험이 없으신 분들은 `powershell`을 추천드립니다. 또한 Windows 10을 메인 운영 체제로 사용하시는 분은 따로 설치하실 필요 없이 `윈도우 버튼 + S`로 `powershell`을 검색하여 실행하시면 됩니다.
+
+### PowerShell로 ssh 접속하기
+1. https://github.com/PowerShell/Win32-OpenSSH/releases  에서 최신 SSH 빌드 다운로드
+2. 해당 압축파일의 압축을 풀고 폴더를 통째로 Program Files 폴더로 옮긴다.
+3. 시스템속성-> 고급-> 환경변수 설정 창에서 시스템변수의 Path 값에 해당 SSH폴더의
+경로를 추가한다.
+4. Windows PowerShell을 관리자권한으로 실행한다.
+5. ssh -i (.pem파일 경로) ec2-user@public_domain을 입력한다.
+6. 최초 연결시 y를 입력하고 엔터 그 후 성공적으로 연결이 되는지 확인한다.
+
+### Putty로 ssh 접속하기
 1. putty를 설치한다. [putty 설치 링크](https://www.putty.org/)
 2. putty를 설치할때 같이 설치되는 puttygen(key genarator)를 실행한다.
 3. puttygen의 상단 Conversions 탭의 import key 를 클릭한다.
@@ -18,19 +32,10 @@ Name에 입력한다.
 클릭한다.
 12. 콘솔창이 열리고 생성한 인스턴스에 연결을 성공했다.
 
-## PowerShell로 ssh 접속하기
-1. https://github.com/PowerShell/Win32-OpenSSH/releases  에서 최신 SSH 빌드 다운로드
-2. 해당 압축파일의 압축을 풀고 폴더를 통째로 Program Files 폴더로 옮긴다.
-3. 시스템속성-> 고급-> 환경변수 설정 창에서 시스템변수의 Path 값에 해당 SSH폴더의
-경로를 추가한다.
-4. Windows PowerShell을 관리자권한으로 실행한다.
-5. ssh -i (.pem파일 경로) ec2-user@public_domain 을 입력한다.
-6. 최초 연결시 y를 입력하고 엔터 그 후 성공적으로 연결이 되는지 확인한다.
-
-# MacOS 환경
-## Iterm2 설치
+## MacOS 환경
+### Iterm2 설치
 - [Iterm 설치 링크](https://www.iterm2.com/downloads.html)에 접속하여 Stable Releases 가장 상위 버전을 설치한다.
 
-# 공통
+## 공통(Code editor)
 ## VS code 설치
 - [VS code 설치 링크](https://code.visualstudio.com/)에 접속하여 설치
